Added GCN PQV2 3.

--- a/configs/GCN_PQV2_3/peptides-func-GCN_PQV2-weighted_2.yaml
+++ b/configs/GCN_PQV2_3/peptides-func-GCN_PQV2-weighted_2.yaml
@@ -27,7 +27,7 @@ gnn:
   layers_mp: 5
   layers_post_mp: 1
   dim_inner: 300
-  layer_type: gcnconv
+  layer_type: mem_gcnconv_3
   stage_type: stack
   batchnorm: True
   act: relu
